// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Accessibility/Visually Hidden Visually Hidden 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap"
    rel="stylesheet"
  />,
  <link
    href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap"
    rel="stylesheet"
  />,
  <div
    className="sc-ikZpkk hOabxi"
  >
    A screen reader will read this but you can't see it
  </div>,
]
`;

exports[`Storyshots Buttons/Bookmark Lesson Button Bookmark Lesson Button 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap"
    rel="stylesheet"
  />,
  <link
    href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap"
    rel="stylesheet"
  />,
  <div>
    <div>
      <button
        aria-label="Add Bookmark"
        className="sc-kDDrLX sc-crXcEl znPMp jxrQBl"
        disabled={false}
        onClick={[Function]}
        size="small"
        title="Add Bookmark"
      >
        <div
          className="sc-iqcoie cqWLJz"
          size="small"
        >
          <span
            className="sc-dkzDqf duyNNI"
            height={16}
            width={16}
          >
            <span
              className="sc-hKMtZM iyxfMn"
              height={16}
              width={16}
            >
              <svg
                fill="currentColor"
                viewBox="2 2 20 20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
                />
              </svg>
            </span>
          </span>
        </div>
      </button>
    </div>
  </div>,
]
`;

exports[`Storyshots Buttons/Button As Link Button As Link 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap"
    rel="stylesheet"
  />,
  <link
    href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap"
    rel="stylesheet"
  />,
  <a
    aria-label="Click me"
    className="sc-papXJ cJutkB"
    href="/"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseEnter={[Function]}
    role="button"
    size="small"
    title="Click me"
  >
    <span
      className="sc-ftvSup ezdXIg"
    >
      Click me
    </span>
  </a>,
]
`;

exports[`Storyshots Buttons/Button Button 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap"
    rel="stylesheet"
  />,
  <link
    href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap"
    rel="stylesheet"
  />,
  <button
    aria-label="Click me"
    className="sc-kDDrLX sc-hAZoDl znPMp fPcRUm"
    size="small"
    title="Click me"
  >
    <span
      className="sc-ftvSup ezdXIg"
    >
      Click me
    </span>
  </button>,
]
`;

exports[`Storyshots Buttons/Button Group Button Group 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap"
    rel="stylesheet"
  />,
  <link
    href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap"
    rel="stylesheet"
  />,
  <div
    className="sc-bczRLJ sc-gsnTZi sc-fEOsli kzKShG iVslse iaHsef"
  >
    <a
      aria-label="Download Lesson"
      className="sc-papXJ cJutkB"
      href="/"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseEnter={[Function]}
      role="button"
      size="small"
      title="Download Lesson"
    >
      <span
        className="sc-iBkjds kyChGO"
      >
        <span
          className="sc-dkzDqf duyNNI"
          height={16}
          width={16}
        >
          <span
            className="sc-hKMtZM iyxfMn"
            height={16}
            width={16}
          >
            <svg
              fill="none"
              height="100%"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2.5"
              viewBox="0 0 24 24"
              width="100%"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
              />
              <polyline
                points="7 10 12 15 17 10"
              />
              <line
                x1="12"
                x2="12"
                y1="15"
                y2="3"
              />
            </svg>
          </span>
        </span>
      </span>
      <span
        className="sc-ftvSup ezdXIg"
      >
        Download
      </span>
    </a>
    <a
      aria-label="Share Lesson"
      className="sc-papXJ cJutkB"
      href="/"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseEnter={[Function]}
      role="button"
      size="small"
      title="Share Lesson"
    >
      <span
        className="sc-iBkjds kyChGO"
      >
        <span
          className="sc-dkzDqf duyNNI"
          height={16}
          width={16}
        >
          <span
            className="sc-hKMtZM iyxfMn"
            height={16}
            width={16}
          >
            <svg
              fill="none"
              height="100%"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2.5"
              viewBox="0 0 24 24"
              width="100%"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="18"
                cy="5"
                r="3"
              />
              <circle
                cx="6"
                cy="12"
                r="3"
              />
              <circle
                cx="18"
                cy="19"
                r="3"
              />
              <line
                x1="8.59"
                x2="15.42"
                y1="13.51"
                y2="17.49"
              />
              <line
                x1="15.41"
                x2="8.59"
                y1="6.51"
                y2="10.49"
              />
            </svg>
          </span>
        </span>
      </span>
      <span
        className="sc-ftvSup ezdXIg"
      >
        Share
      </span>
    </a>
  </div>,
]
`;

exports[`Storyshots Buttons/Icon Button As Link Icon Button As Link 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap"
    rel="stylesheet"
  />,
  <link
    href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap"
    rel="stylesheet"
  />,
  <a
    aria-label="Click me"
    className="sc-fnykZs YLPSu"
    href="/"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseEnter={[Function]}
    role="button"
    size="small"
  >
    <div
      className="sc-iqcoie hLgcWM"
      size="small"
    >
      <span
        className="sc-dkzDqf duyNNI"
        height={16}
        width={16}
      >
        <span
          className="sc-hKMtZM iyxfMn"
          height={16}
          width={16}
        >
          <svg
            fill="none"
            height="100%"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2.5"
            viewBox="0 0 24 24"
            width="100%"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
            />
            <polyline
              points="7 10 12 15 17 10"
            />
            <line
              x1="12"
              x2="12"
              y1="15"
              y2="3"
            />
          </svg>
        </span>
      </span>
    </div>
  </a>,
]
`;

exports[`Storyshots Buttons/Icon Button Icon Button 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap"
    rel="stylesheet"
  />,
  <link
    href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap"
    rel="stylesheet"
  />,
  <button
    aria-label="Click me"
    className="sc-kDDrLX sc-crXcEl znPMp faFdIS"
    size="small"
    title="Click me"
  >
    <div
      className="sc-iqcoie hLgcWM"
      size="small"
    >
      <span
        className="sc-dkzDqf duyNNI"
        height={16}
        width={16}
      >
        <span
          className="sc-hKMtZM iyxfMn"
          height={16}
          width={16}
        >
          <svg
            fill="none"
            height="100%"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2.5"
            viewBox="0 0 24 24"
            width="100%"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
            />
            <polyline
              points="7 10 12 15 17 10"
            />
            <line
              x1="12"
              x2="12"
              y1="15"
              y2="3"
            />
          </svg>
        </span>
      </span>
    </div>
  </button>,
]
`;

exports[`Storyshots Cards/Card Card 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap"
    rel="stylesheet"
  />,
  <link
    href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap"
    rel="stylesheet"
  />,
  <div
    className="sc-bjUoiL cKZDDi"
  >
    <h2>
      Card title
    </h2>
    <p>
      You can put anything you like in here.
    </p>
  </div>,
]
`;

exports[`Storyshots Element/Badge Icon Badge 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap"
    rel="stylesheet"
  />,
  <link
    href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap"
    rel="stylesheet"
  />,
  <div
    className="sc-bczRLJ sc-gsnTZi sc-gKXOVf kzKShG dyrBQy blNMGH"
  >
    <svg
      className="sc-eCYdqJ dRtcnw"
      fill="none"
      height="100%"
      viewBox="0 0 54 54"
      width="100%"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M24.302.967a8 8 0 0 1 5.396 0l1.615.578a8 8 0 0 0 2.1.447l1.71.128a8 8 0 0 1 4.93 2.195l1.24 1.185c.52.497 1.105.921 1.737 1.262l1.511.813a8 8 0 0 1 3.611 4.01l.65 1.588c.273.665.634 1.29 1.074 1.859l1.05 1.357a8 8 0 0 1 1.667 5.132l-.051 1.715a8 8 0 0 0 .224 2.135l.407 1.667a8 8 0 0 1-.564 5.366l-.745 1.546a8.002 8.002 0 0 0-.663 2.042l-.306 1.688a8 8 0 0 1-2.698 4.673l-1.31 1.11a7.999 7.999 0 0 0-1.435 1.595l-.967 1.418a8 8 0 0 1-4.366 3.171l-1.647.482c-.69.201-1.35.495-1.96.873l-1.46.902a8 8 0 0 1-5.279 1.121l-1.7-.23a8.003 8.003 0 0 0-2.146 0l-1.7.23a8 8 0 0 1-5.279-1.121l-1.46-.902a8.004 8.004 0 0 0-1.96-.873l-1.647-.482a8 8 0 0 1-4.366-3.171l-.966-1.418a8.001 8.001 0 0 0-1.437-1.595l-1.309-1.11a8 8 0 0 1-2.698-4.673L2.8 35.992a8.001 8.001 0 0 0-.663-2.042l-.745-1.546a8 8 0 0 1-.564-5.366l.407-1.667a8 8 0 0 0 .224-2.135l-.051-1.715a8 8 0 0 1 1.667-5.132l1.05-1.357a8 8 0 0 0 1.073-1.86l.651-1.587a8 8 0 0 1 3.61-4.01l1.512-.813A8.001 8.001 0 0 0 12.706 5.5l1.24-1.185a8 8 0 0 1 4.93-2.195l1.711-.128a8 8 0 0 0 2.1-.447l1.615-.578Z"
        fill="currentColor"
      />
    </svg>
    <div
      className="sc-bczRLJ sc-gsnTZi sc-jSMfEi kzKShG dyrBQy ffTwbC"
    >
      <span
        className="sc-dkzDqf cegtjA"
        height={20}
        width={20}
      >
        <span
          className="sc-hKMtZM dffNhz"
          height={20}
          width={20}
        >
          <svg
            fill="currentColor"
            viewBox="2 2 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
            />
          </svg>
        </span>
      </span>
    </div>
  </div>,
]
`;

exports[`Storyshots Element/Badge Text Badge 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap"
    rel="stylesheet"
  />,
  <link
    href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap"
    rel="stylesheet"
  />,
  <div
    className="sc-bczRLJ sc-gsnTZi sc-gKXOVf kzKShG dyrBQy blNMGH"
  >
    <svg
      className="sc-eCYdqJ dRtcnw"
      fill="none"
      height="100%"
      viewBox="0 0 54 54"
      width="100%"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M24.302.967a8 8 0 0 1 5.396 0l1.615.578a8 8 0 0 0 2.1.447l1.71.128a8 8 0 0 1 4.93 2.195l1.24 1.185c.52.497 1.105.921 1.737 1.262l1.511.813a8 8 0 0 1 3.611 4.01l.65 1.588c.273.665.634 1.29 1.074 1.859l1.05 1.357a8 8 0 0 1 1.667 5.132l-.051 1.715a8 8 0 0 0 .224 2.135l.407 1.667a8 8 0 0 1-.564 5.366l-.745 1.546a8.002 8.002 0 0 0-.663 2.042l-.306 1.688a8 8 0 0 1-2.698 4.673l-1.31 1.11a7.999 7.999 0 0 0-1.435 1.595l-.967 1.418a8 8 0 0 1-4.366 3.171l-1.647.482c-.69.201-1.35.495-1.96.873l-1.46.902a8 8 0 0 1-5.279 1.121l-1.7-.23a8.003 8.003 0 0 0-2.146 0l-1.7.23a8 8 0 0 1-5.279-1.121l-1.46-.902a8.004 8.004 0 0 0-1.96-.873l-1.647-.482a8 8 0 0 1-4.366-3.171l-.966-1.418a8.001 8.001 0 0 0-1.437-1.595l-1.309-1.11a8 8 0 0 1-2.698-4.673L2.8 35.992a8.001 8.001 0 0 0-.663-2.042l-.745-1.546a8 8 0 0 1-.564-5.366l.407-1.667a8 8 0 0 0 .224-2.135l-.051-1.715a8 8 0 0 1 1.667-5.132l1.05-1.357a8 8 0 0 0 1.073-1.86l.651-1.587a8 8 0 0 1 3.61-4.01l1.512-.813A8.001 8.001 0 0 0 12.706 5.5l1.24-1.185a8 8 0 0 1 4.93-2.195l1.711-.128a8 8 0 0 0 2.1-.447l1.615-.578Z"
        fill="currentColor"
      />
    </svg>
    <div
      className="sc-bczRLJ sc-gsnTZi sc-jSMfEi kzKShG dyrBQy ffTwbC"
    >
      80%
    </div>
  </div>,
]
`;

exports[`Storyshots Feedback/LoadingSpinner Loading Spinner 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap"
    rel="stylesheet"
  />,
  <link
    href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap"
    rel="stylesheet"
  />,
  <span
    className="sc-gicCDI grCliV"
  >
    <span
      className="sc-iIPllB hsglYM"
    >
      Loading
    </span>
  </span>,
]
`;

exports[`Storyshots Form/BigInput Big Input 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap"
    rel="stylesheet"
  />,
  <link
    href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap"
    rel="stylesheet"
  />,
  <input
    className="sc-bBrHrO sc-ivTmOn djAESs dzdGKH"
    onChange={[Function]}
    placeholder="Placeholder"
    value=""
  />,
]
`;

exports[`Storyshots Form/Checkbox Checkbox 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap"
    rel="stylesheet"
  />,
  <link
    href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap"
    rel="stylesheet"
  />,
  <label
    className="sc-idiyUo cSESiT"
    disabled={false}
    htmlFor="Click me"
    onClick={[Function]}
  >
    <input
      checked={true}
      className="sc-dIouRR kuTKab"
      disabled={false}
      id="Click me"
      onChange={[Function]}
      type="checkbox"
    />
    <svg
      aria-hidden="true"
      className="sc-hHLeRK"
      fill="none"
      focusable="false"
      height="24"
      viewBox="0 0 24 24"
      width="24"
    >
      <rect
        fill="transparent"
        height="23"
        rx="3.5"
        width="23"
        x="0.5"
        y="0.5"
      />
      <path
        checked={true}
        className="sc-dmRaPn gpaSuf"
        d="M10.0664 16.8233C10.3008 17.0589 10.6992 17.0589 10.9336 16.8233L17.8242 9.8966C18.0586 9.66099 18.0586 9.26047 17.8242 9.02487L16.9805 8.1767C16.7461 7.9411 16.3711 7.9411 16.1367 8.1767L10.5117 13.8312L7.86328 11.1924C7.62891 10.9568 7.25391 10.9568 7.01953 11.1924L6.17578 12.0406C5.94141 12.2762 5.94141 12.6767 6.17578 12.9123L10.0664 16.8233Z"
      />
      <rect
        className="sc-kgflAQ jqceqL"
        height="23"
        rx="3.5"
        width="23"
        x="0.5"
        y="0.5"
      />
    </svg>
    <span
      className="sc-fLlhyt hNTqcU"
    >
      Click me
    </span>
  </label>,
]
`;

exports[`Storyshots Form/Input Input 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap"
    rel="stylesheet"
  />,
  <link
    href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap"
    rel="stylesheet"
  />,
  <div
    className="sc-bczRLJ sc-gsnTZi kzKShG hUqtia"
  >
    <input
      className="sc-bBrHrO sc-llJcti djAESs jfkWLa"
      onChange={[Function]}
      placeholder="Placeholder"
      value=""
    />
  </div>,
]
`;

exports[`Storyshots Form/Input With Icon 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap"
    rel="stylesheet"
  />,
  <link
    href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap"
    rel="stylesheet"
  />,
  <div
    className="sc-bczRLJ sc-gsnTZi kzKShG hUqtia"
  >
    <input
      className="sc-bBrHrO sc-llJcti djAESs kYdnV"
      onChange={[Function]}
      placeholder="Placeholder"
      value=""
    />
    <span
      className="sc-dkzDqf fgIwZC sc-cxabCf hsKsjn"
      height={20}
      width={40}
    >
      <span
        className="sc-hKMtZM dffNhz"
        height={20}
        width={20}
      >
        <svg
          fill="none"
          height="100%"
          viewBox="0 0 17 17"
          width="100%"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15.875 14.6562L12.0938 10.875C12 10.8125 11.9062 10.75 11.8125 10.75H11.4062C12.375 9.625 13 8.125 13 6.5C13 2.9375 10.0625 0 6.5 0C2.90625 0 0 2.9375 0 6.5C0 10.0938 2.90625 13 6.5 13C8.125 13 9.59375 12.4062 10.75 11.4375V11.8438C10.75 11.9375 10.7812 12.0312 10.8438 12.125L14.625 15.9062C14.7812 16.0625 15.0312 16.0625 15.1562 15.9062L15.875 15.1875C16.0312 15.0625 16.0312 14.8125 15.875 14.6562ZM6.5 11.5C3.71875 11.5 1.5 9.28125 1.5 6.5C1.5 3.75 3.71875 1.5 6.5 1.5C9.25 1.5 11.5 3.75 11.5 6.5C11.5 9.28125 9.25 11.5 6.5 11.5Z"
            fill="currentColor"
          />
        </svg>
      </span>
    </span>
  </div>,
]
`;

exports[`Storyshots Foundations/Box Box 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap"
    rel="stylesheet"
  />,
  <link
    href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap"
    rel="stylesheet"
  />,
  <div
    className="sc-bczRLJ cdYuTy"
  >
    Box
  </div>,
]
`;

exports[`Storyshots Foundations/Flex Flex 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap"
    rel="stylesheet"
  />,
  <link
    href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap"
    rel="stylesheet"
  />,
  <div
    className="sc-bczRLJ sc-gsnTZi fBxaaT dwApCD"
  >
    Flex box
  </div>,
]
`;

exports[`Storyshots Foundations/Line Clamp Line Clamp 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap"
    rel="stylesheet"
  />,
  <link
    href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap"
    rel="stylesheet"
  />,
  <div
    className="sc-jqUVSM eDimOC"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Id semper risus in hendrerit gravida rutrum quisque non tellus. Nibh praesent tristique magna sit. A arcu cursus vitae congue mauris rhoncus aenean. Turpis egestas maecenas pharetra convallis posuere morbi leo. Faucibus pulvinar elementum integer enim neque volutpat ac tincidunt. Vitae suscipit tellus mauris a diam maecenas.
  </div>,
]
`;

exports[`Storyshots Headers & Footers/SiteFooter Site Footer Example 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap"
    rel="stylesheet"
  />,
  <link
    href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap"
    rel="stylesheet"
  />,
  <div>
    <footer
      className="sc-bZkfAO iitfvo"
    >
      © Oak National Academy 
      2022
    </footer>
  </div>,
]
`;

exports[`Storyshots Inputs/search Search Form 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap"
    rel="stylesheet"
  />,
  <link
    href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap"
    rel="stylesheet"
  />,
  <form
    className="sc-ezWOiH ewyVnL"
    onSubmit={[Function]}
  >
    <div
      className="sc-bczRLJ sc-gsnTZi kzKShG hUqtia"
    >
      <input
        aria-label="Search"
        className="sc-bBrHrO sc-llJcti djAESs jfkWLa"
        onChange={[Function]}
        placeholder="Search"
        type="search"
        value=""
      />
    </div>
    <button
      aria-label="Submit"
      className="sc-kDDrLX sc-crXcEl znPMp iZAWBk"
      onClick={[Function]}
      size="small"
      title="Submit"
      type="submit"
    >
      <div
        className="sc-iqcoie hLgcWM"
        size="small"
      >
        <span
          className="sc-dkzDqf duyNNI"
          height={16}
          width={16}
        >
          <span
            className="sc-hKMtZM iyxfMn"
            height={16}
            width={16}
          >
            <svg
              fill="none"
              height="100%"
              viewBox="0 0 17 17"
              width="100%"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.875 14.6562L12.0938 10.875C12 10.8125 11.9062 10.75 11.8125 10.75H11.4062C12.375 9.625 13 8.125 13 6.5C13 2.9375 10.0625 0 6.5 0C2.90625 0 0 2.9375 0 6.5C0 10.0938 2.90625 13 6.5 13C8.125 13 9.59375 12.4062 10.75 11.4375V11.8438C10.75 11.9375 10.7812 12.0312 10.8438 12.125L14.625 15.9062C14.7812 16.0625 15.0312 16.0625 15.1562 15.9062L15.875 15.1875C16.0312 15.0625 16.0312 14.8125 15.875 14.6562ZM6.5 11.5C3.71875 11.5 1.5 9.28125 1.5 6.5C1.5 3.75 3.71875 1.5 6.5 1.5C9.25 1.5 11.5 3.75 11.5 6.5C11.5 9.28125 9.25 11.5 6.5 11.5Z"
                fill="currentColor"
              />
            </svg>
          </span>
        </span>
      </div>
    </button>
  </form>,
]
`;

exports[`Storyshots Media/Icon Icon Example 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap"
    rel="stylesheet"
  />,
  <link
    href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap"
    rel="stylesheet"
  />,
  <div>
    <span
      className="sc-dkzDqf duOgJI"
      height={100}
      width={100}
    >
      <span
        className="sc-hKMtZM gcvcqv"
        height={100}
        width={100}
      >
        <svg
          fill="none"
          height="100%"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2.5"
          viewBox="0 0 24 24"
          width="100%"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="9 18 15 12 9 6"
          />
        </svg>
      </span>
    </span>
  </div>,
]
`;

exports[`Storyshots Navigation/Breadcrumbs Breadcrumb Example 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap"
    rel="stylesheet"
  />,
  <link
    href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap"
    rel="stylesheet"
  />,
  <div>
    <nav
      aria-label="Breadcrumb"
      className="sc-evZas jQyVyn"
    >
      <ol
        className="sc-breuTD bDywPs"
      >
        <li
          className="sc-ksZaOG lhoEWQ"
        >
          <a
            href="/"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Unit Quiz
          </a>
        </li>
        <li
          className="sc-ksZaOG lhoEWQ"
        >
          <span
            className="sc-dkzDqf cegtjA"
            height={20}
            width={20}
          >
            <span
              className="sc-hKMtZM dffNhz"
              height={20}
              width={20}
            >
              <svg
                fill="none"
                height="100%"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth="2.5"
                viewBox="0 0 24 24"
                width="100%"
                xmlns="http://www.w3.org/2000/svg"
              >
                <polyline
                  points="9 18 15 12 9 6"
                />
              </svg>
            </span>
          </span>
          <a
            href="/"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            View In Classroom
          </a>
        </li>
        <li
          className="sc-ksZaOG lhoEWQ"
        >
          <span
            className="sc-dkzDqf cegtjA"
            height={20}
            width={20}
          >
            <span
              className="sc-hKMtZM dffNhz"
              height={20}
              width={20}
            >
              <svg
                fill="none"
                height="100%"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth="2.5"
                viewBox="0 0 24 24"
                width="100%"
                xmlns="http://www.w3.org/2000/svg"
              >
                <polyline
                  points="9 18 15 12 9 6"
                />
              </svg>
            </span>
          </span>
          <a
            href="/"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Foundation Curriculum (PDF)
          </a>
        </li>
        <li
          className="sc-ksZaOG lhoEWQ"
        >
          <span
            className="sc-dkzDqf cegtjA"
            height={20}
            width={20}
          >
            <span
              className="sc-hKMtZM dffNhz"
              height={20}
              width={20}
            >
              <svg
                fill="none"
                height="100%"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth="2.5"
                viewBox="0 0 24 24"
                width="100%"
                xmlns="http://www.w3.org/2000/svg"
              >
                <polyline
                  points="9 18 15 12 9 6"
                />
              </svg>
            </span>
          </span>
          <a
            href="/"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Higher Curriculum (PDF)
          </a>
        </li>
      </ol>
    </nav>
  </div>,
]
`;
